Created Entites table in HTMLCheatsheet.jsx

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Paragraph Example</title>
+    <title>Title</title>
     <style>
       /* Simple CSS to style paragraphs */
       p {
@@ -16,23 +16,9 @@
     </style>
   </head>
   <body>
-    <h1>Example of HTML Paragraphs</h1>
-    <p>
-      This is the first paragraph of text. It is used to demonstrate how
-      paragraphs work in HTML. The text will be displayed with space above and
-      below it, separating it from other content.
-    </p>
-
-    <p>
-      This is the second paragraph. Each paragraph starts on a new line and
-      extends to the full width of the container. Paragraphs are usually used to
-      break up text into readable chunks.
-    </p>
-
-    <p>
-      Additional paragraphs can be added in the same way. HTML will
-      automatically add space between paragraphs to make the content easier to
-      read and understand.
-    </p>
+    <!-- Not working -->
+    <p>This is the entities. <HTML></p>
+       <!-- Working -->
+    <p>This is the entities. &lt;HTML&gt;</p>
   </body>
 </html>
