--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logo.jpg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://images.cheatsheet.cam/images/image-1730098103659.webp"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cheatsheet</title>
   </head>
