--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://images.cheatsheet.cam/images/image-1730098103659.webp"
+      href="https://images.cheatsheet.cam/images/state.webp"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cheatsheet</title>
